--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^0.27.2",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "express": "^4.18.1",
     "flush-promises": "^1.0.2",
+    "serve-static": "^1.15.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.15",
     "vuex": "^4.0.2"
